--- a/EshopMVC/Content/assets/Email/Email.html
+++ b/EshopMVC/Content/assets/Email/Email.html
@@ -5,10 +5,10 @@
     <title>Thông tin đặt hàng từ khách hàng</title>
 </head>
 <body>
-    Thông tin đơn hàng: {{CustomerName}}
+    Thông tin đơn hàng: {{CustomerName}} <br />
     Điện thoại: {{Phone}} <br />
     Email: {{Email}} <br />
     Địa chỉ: {{Address}} <br />
-    Trị giá: {{Total}} <br />
+    Trị giá: {{Total}} $ <br />
 </body>
 </html>
